[gd_scene load_steps=11 format=2]

[ext_resource path="res://GUI.gd" type="Script" id=1]
[ext_resource path="res://sprites/music-on.png" type="Texture" id=2]
[ext_resource path="res://sprites/music-off.png" type="Texture" id=3]
[ext_resource path="res://Music.gd" type="Script" id=4]
[ext_resource path="res://sprites/sfx-on.png" type="Texture" id=5]
[ext_resource path="res://sprites/sfx-off.png" type="Texture" id=6]
[ext_resource path="res://sfx.gd" type="Script" id=7]
[ext_resource path="res://pixel.tres" type="DynamicFont" id=8]
[ext_resource path="res://sprites/lifebarbg.png" type="Texture" id=9]
[ext_resource path="res://sprites/lifebarfg.png" type="Texture" id=10]

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.429291
margin_top = 0.214638
margin_right = -0.429291
margin_bottom = 0.21463
mouse_filter = 2
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -24.0
margin_top = 8.0
margin_bottom = 16.0
mouse_filter = 2

[node name="Music" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
margin_right = 24.0
margin_bottom = 16.0
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
script = ExtResource( 4 )

[node name="SFX" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
margin_top = 20.0
margin_right = 24.0
margin_bottom = 36.0
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
script = ExtResource( 7 )

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer"]
editor/display_folded = true
margin_left = 3.0
margin_right = 55.0
margin_bottom = 32.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer2"]
margin_right = 75.0
margin_bottom = 14.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true
}

[node name="Wood" type="Label" parent="CanvasLayer/VBoxContainer2/HBoxContainer"]
margin_right = 66.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Super-charges:"
uppercase = true

[node name="WoodAmount" type="Label" parent="CanvasLayer/VBoxContainer2/HBoxContainer"]
margin_left = 70.0
margin_right = 75.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"

[node name="LifeBar" type="TextureProgress" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -14.0
margin_right = 100.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 10 )

[node name="PauseMenu" type="Panel" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = -47.5
margin_right = 61.0
margin_bottom = 66.0

[node name="Restart" type="Button" parent="CanvasLayer/PauseMenu"]
margin_left = 8.78055
margin_top = 30.251
margin_right = 112.781
margin_bottom = 50.251
custom_fonts/font = ExtResource( 8 )
text = "Restart "

[node name="ExitToMainMenu" type="Button" parent="CanvasLayer/PauseMenu"]
margin_left = 8.62595
margin_top = 57.663
margin_right = 112.626
margin_bottom = 77.663
custom_fonts/font = ExtResource( 8 )
text = "Exit to main menu"

[node name="ExitToDesktop" type="Button" parent="CanvasLayer/PauseMenu"]
margin_left = 8.88947
margin_top = 85.3326
margin_right = 112.889
margin_bottom = 105.333
custom_fonts/font = ExtResource( 8 )
text = "Exit to desktop"

[node name="Paused" type="Label" parent="CanvasLayer/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -15.1013
margin_top = -52.3043
margin_right = 14.8987
margin_bottom = -38.3043
custom_fonts/font = ExtResource( 8 )
text = "Paused"
uppercase = true

[node name="GameOver" type="Label" parent="CanvasLayer/PauseMenu"]
visible = false
margin_left = 38.4739
margin_top = 3.9528
margin_right = 82.4739
margin_bottom = 17.9528
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "GAME OVER"
uppercase = true

[node name="GameWon" type="Label" parent="CanvasLayer/PauseMenu"]
visible = false
margin_left = 22.3451
margin_top = -1.58112
margin_right = 98.3451
margin_bottom = 29.4189
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.0784314, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Congratulations!
YOU DID IT!"
align = 1
uppercase = true

[node name="VBoxContainer3" type="HBoxContainer" parent="CanvasLayer"]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -34.0
margin_right = 34.0
margin_bottom = 14.0

[node name="Score" type="Label" parent="CanvasLayer/VBoxContainer3"]
margin_right = 27.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "score:"
uppercase = true

[node name="ScoreAmount" type="Label" parent="CanvasLayer/VBoxContainer3"]
margin_left = 31.0
margin_right = 36.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
[connection signal="toggled" from="CanvasLayer/VBoxContainer/Music" to="CanvasLayer/VBoxContainer/Music" method="_on_Music_toggled"]
[connection signal="toggled" from="CanvasLayer/VBoxContainer/SFX" to="CanvasLayer/VBoxContainer/SFX" method="_on_Music_toggled"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/ExitToMainMenu" to="." method="_on_ExitToMainMenu_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/ExitToDesktop" to="." method="_on_ExitToDesktop_pressed"]
